Add basic operators

--- a/Ejercicio 1/Ejercicio 1.vcxproj
+++ b/Ejercicio 1/Ejercicio 1.vcxproj
@@ -141,7 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Fraction.tpp" />
-    <ClCompile Include="FractionCalculator.cpp" />
+    <ClCompile Include="FractionCalculator.tpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
