--- a/Ejercicio 1/Ejercicio 1.vcxproj.filters
+++ b/Ejercicio 1/Ejercicio 1.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="FractionCalculator.cpp">
+    <ClCompile Include="FractionCalculator.tpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="Fraction.tpp">
